syntax = "proto3";

message OnionFruitConfigFile {
  int32 configVersion = 1;
  string lastClientVersion = 2;

  string entryCountryCode = 3;
  string exitCountryCode = 4;
  
  bool enableWebsiteLaunchOnConnect = 5;
  bool enableWebsiteLaunchOnDisconnect = 6;
  
  optional string launchWebsiteOnConnect = 7;
  optional string launchWebsiteOnDisconnect = 8;
  
  // indicates the user is behind a firewall that only allows connections on specific ports
  bool limitOutboundConnectionPorts = 9;
  
  // list of ports the user can connect to, used in conjunction with limitOutboundConnectionPorts
  repeated uint32 allowedFirewallPorts = 10;
  
  TRANSPORT_TYPES SelectedTransportType = 11;
  repeated string UserDefinedBridges = 12;
  
  // aka the "killswitch" feature
  bool disconnectOnProxyFailure = 13;
  bool enableErrorReporting = 14;
  bool enableDiscordRpc = 15;

  optional UPDATE_STREAM clientUpdateStream = 16;

  optional int32 maxCircuitIdleTime = 17;
  
  // Whether DNS proxying should be enabled.
  bool enableDnsProxying = 18;
  
  // What pre-defined fallback DNS servers to use.
  FALLBACK_DNS_SERVER_PRESET fallbackDnsServerPreset = 20;

  // Custom DNS server IPs used when fallbackDnsServerPreset is set to Custom
  repeated bytes customFallbackDnsServers = 19;
}

enum TRANSPORT_TYPES {
  None = 0;
  Plain = 1;
  meek = 2;
  obfs4 = 3;
  obfs3 = 4;
  scramblesuit = 5;
  webtunnel = 6;
  snowflake = 7;
  conjure = 8;
}

enum FALLBACK_DNS_SERVER_PRESET {
  Unused = 0;
  Custom = 1;
  Cloudflare = 2;
  Google = 3;
  Quad9 = 4;
  OpenDNS = 5;
}

enum UPDATE_STREAM {
  Stable = 0;
  Beta = 1;
}